samples/_failures_safe/1761728789_be4c2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_165fe2b5.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_165fe2b5.c:188:5: error: expected expression at end of input
  188 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_165fe2b5.c:188:5: error: expected declaration or statement at end of input
